--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "cryptosino",
   "version": "0.1.0",
   "private": true,
- 
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
