--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
